--- a/shop.html
+++ b/shop.html
@@ -51,7 +51,7 @@
 
         async function loadProducts() {
             try {
-                const response = await fetch('http://localhost:3000/productos');
+                const response = await fetch('https://wonderful-bush-012646010.5.azurestaticapps.net');
                 if (!response.ok) throw new Error('Error en la solicitud: ' + response.statusText);
 
                 const products = await response.json();
